@@ -5,4 +5,11 @@
       <property name="user_api_key" type="string" purge="False"></property>
       <property name="project" type="string" purge="False"></property>
   </object>
+  <object name="site_properties" >
+      <property name="typesUseViewActionInListings" types="lines" purge="False">
+        <element value="Image"/>
+        <element value="RichImage"/>
+        <element value="File"/>
+      </property>
+  </object>
 </object>
