@@ -38,7 +38,7 @@
     <element value="plone.app.dexterity.behaviors.metadata.IOwnership"/>
     <element value="plone.app.dexterity.behaviors.discussion.IAllowDiscussion"/>
     <element value="plone.app.dexterity.behaviors.id.IShortName"/>
-    <element value="plone.app.dexterity.behaviors.filename.INameFromFileName"/>
+    <element value="plone.app.content.interfaces.INameFromTitle"/>
     <element value="plone.app.dexterity.behaviors.exclfromnav.IExcludeFromNavigation"/>
     <element value="plone.app.relationfield.behavior.IRelatedItems"/>
     <!-- <element value="collective.dexteritytextindexer.behavior.IDexterityTextIndexer" /> -->
